LPS-128335 Avoid that bulk status bar is begging covered by management toolbar

--- a/modules/apps/document-library/document-library-web/src/main/resources/META-INF/resources/document_library/css/main.scss
+++ b/modules/apps/document-library/document-library-web/src/main/resources/META-INF/resources/document_library/css/main.scss
@@ -27,7 +27,6 @@ $productMenuWidth: 320px;
 
 	.bulk-status-container {
 		height: 32px;
-		margin-top: -1.25rem;
 
 		.bulk-status {
 			background: #2e5aac;
